--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
         <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 		
 	    <style>
+
+			/* lightbox css */
+			#overlay {
+                position: fixed; top: 0; left: 0; height: 100%; width: 100%; background: black url(../../css/images/spinner.gif) no-repeat scroll center center;
+                }
+            #lightbox { position: fixed;
+                }
+			
 			/* Set styles to equalise browser rendition*/
             html, body, h1, h2, h3, h4, h5, h6, p, ol, ul, li { padding: 0; margin: 0;
                 }
