--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 			/* lightbox css */
 			#overlay {
-                position: fixed; top: 0; left: 0; height: 100%; width: 100%; background: black url(../../css/images/spinner.gif) no-repeat scroll center center;
+                position: fixed; top: 0; left: 0; height: 100%; width: 100%; background: black url(./css-jq/images/spinner.gif) no-repeat scroll center center;
                 }
             #lightbox { position: fixed;
                 }
