--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 }
             #container{ margin:0 auto; text-align: left; width: 970px;
                 }
-            #header{ height: 60px; color: #172322; background: transparent url(./images/header-corners.png) no-repeat bottom left;
+            #header{ height: 60px; color: #172322; background: transparent url(./css-jq/images/header-corners.png) no-repeat bottom left;
                 }
 			#header h1 { padding:0; margin:0;
                 }
