--- a/index.html
+++ b/index.html
@@ -4695,6 +4695,18 @@ width="220"></p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
             <link rel="stylesheet" href="./CSS/base.css" type="text/css" media="screen" charset="utf-8" />
             <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
             <script type="text/javascript" src="./js/scripts.js"></script>
+
+			<script src="jquery.innerfade.js" type="text/javascript" ></script>
+		<script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="jquery.Jcrop.min.js" type="text/javascript" charset="utf-8"></script>
+		<script type="text/javascript" src="./js/scripts.js"></script>
+		<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+        <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
+        <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
+		<script src="jquery.innerfade.js" type="text/javascript" ></script>
+	    <script src="jquery.cycle.all.min.js" type="text/javascript" ></script>
+			
                 <!-- Template Main JS File -->
             <script src="../orris0/main.js"></script>
 			<a href="https://orris0.github.io/orris0/membership.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
