--- a/index.html
+++ b/index.html
@@ -17,21 +17,39 @@
          Viewport for responsive web design -->
 	    <!-- <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8"> -->
 		<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
-		<!--     01_lightbox -->
+		<!-- 01_lightbox -->
         <link rel="stylesheet" href="./CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
+		<!-- 2_colorbox -->
 		<link rel="stylesheet" href="./CSS/colorbox.css" type="text/css" media="screen" charset="utf-8">
+		<!-- 3_jcrop -->
         <link rel="stylesheet" href="jquery.Jcrop.css" type="text/css" media="screen" charset="utf-8">	   	
-		
+		<!-- -->
 		
 		<script src="jquery.innerfade.js" type="text/javascript" ></script>
+		<!-- -->
 		<script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+		<!-- -->
 		<script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+		<!-- 01_lightbox -->
+        <link rel="stylesheet" href="./CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
+		<!-- 2_colorbox -->
+		<link rel="stylesheet" href="./CSS/colorbox.css" type="text/css" media="screen" charset="utf-8">
+		<!-- 3_jcrop -->
+        <link rel="stylesheet" href="jquery.Jcrop.css" type="text/css" media="screen" charset="utf-8">	   	
+		<!-- -->
+		<!-- -->
 		<script src="jquery.Jcrop.min.js" type="text/javascript" charset="utf-8"></script>
+		<!-- -->
 		<script type="text/javascript" src="./js/scripts.js"></script>
+		<!-- -->
 		<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+		<!-- -->
         <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
+		<!-- -->
         <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
+		<!-- -->
 		<script src="jquery.innerfade.js" type="text/javascript" ></script>
+		<!-- -->
 	    <script src="jquery.cycle.all.min.js" type="text/javascript" ></script>
 		
 		<!-- <link rel="stylesheet" href="./style.css">
@@ -4498,7 +4516,7 @@ width="220"></p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
                     <tbody>
                         <tr>
                             <td>203A</td>
-                            <td>Johny Stardust (<a href="./images/johnny_400.jpg" class="lightbox">pic</a>)</td>
+                            <td>Johny Stardust (<a href="./jQuery-novice-to-ninja/images/johnny_400.jpg" class="lightbox">pic</a>)</td>
                             <td>Front-man</td>
                             <td>Los Angeles</td>
                             <td>$39.95</td>
