--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
     <head profile="http://www.w3.org/2005/10/profile">
         <title>Gallery-page-Templates</title>
         <meta charset=utf-8>
+		<link rel="apple-touch-icon" href="graphics/icon.png">
+	    <meta name="apple-mobile-web-app-capable" content="yes">
+
+	    <meta name=viewport content="width=device-width, initial-scale=1, user-scalable=0">
+
+	    <link rel=stylesheet href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css">
+	    <link rel=stylesheet href="style.css">
+
+	    <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+	    <script src="scripts.js"></script>
+	    <script src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="google-adsense-account" content="ca-pub-9639638377144073">
 	    <meta property="og:title" content="A Basic HTML5 Template">
