--- a/index.html
+++ b/index.html
@@ -4313,6 +4313,15 @@ width="220"></p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
 					</hgroup>
 				</header>
             <!-- </div><!-- end-col-12 -->	
+				<nav>
+                    <ul>
+                        <li><a class="active" href="index.html">Home Page</a></li>
+                        <li><a href="page2.html">Page Two</a></li>
+                        <li><a href="page3.html">Page Three with a long label</a></li>
+                        <li><a href="page4.html">Page Four</a></li>
+                        <li><a href="page5.html">Page Five</a></li>
+                    </ul>
+                </nav>
 			
             <div class="data" id="html5-ch1-7content">
                 <div class="row">
