--- a/index.html
+++ b/index.html
@@ -86,6 +86,16 @@
 			#home {
 	position: relative;
 }
+/* rollover-fa */
+#fader {
+  position: relative;
+}
+
+#fader .to {
+  display: none;
+  position: absolute;
+  left: 0;
+}
 
 #home div {
 	background: url(graphics/cover.png) transparent 50% 50% no-repeat;
