--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
          Viewport for responsive web design -->
 	    <!-- <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8"> -->
 		<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
+		<!-- 04_rollover_fade -->
+		<link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8"/>
+  
 		<!-- 01_lightbox -->
         <link rel="stylesheet" href="./CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
 		<!-- 2_colorbox -->
