--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 	    <meta name=viewport content="width=device-width, initial-scale=1, user-scalable=0">
 
 	    <link rel=stylesheet href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css">
-	    <link rel=stylesheet href="style.css">
+	    <link rel=stylesheet href="./style.css">
 
 	    <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-	    <script src="scripts.js"></script>
+	    <script src="./js/scripts.js"></script>
 	    <script src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="google-adsense-account" content="ca-pub-9639638377144073">
@@ -29,7 +29,7 @@
 	    <!-- <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8"> -->
 		<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
 		<!-- 04_rollover_fade -->
-		<link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8"/>
+		<link rel="stylesheet" href="./style.css" type="text/css" media="screen" charset="utf-8"/>
   
 		<!-- 01_lightbox -->
         <link rel="stylesheet" href="./CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
