--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<!-- 2_colorbox -->
 		<link rel="stylesheet" href="./CSS/colorbox.css" type="text/css" media="screen" charset="utf-8">
 		<!-- 3_jcrop -->
-        <link rel="stylesheet" href="jquery.Jcrop.css" type="text/css" media="screen" charset="utf-8">	   	
+        <link rel="stylesheet" href="./CSS/jquery.Jcrop.css" type="text/css" media="screen" charset="utf-8">	   	
 		<!-- -->
 		
 		<script src="jquery.innerfade.js" type="text/javascript" ></script>
