--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
          Viewport for responsive web design -->
 	    <!-- <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8"> -->
 		<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
+		 <link rel="stylesheet" href="../../css/sunny/jquery-ui-1.8.17.custom.css" type="text/css" media="screen" charset="utf-8" />
+         <link rel="stylesheet" href="splitter.css" type="text/css" media="screen" charset="utf-8" />
+  
+  <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../../lib/jquery-ui-1.8.17.custom.min.js" type="text/javascript" charset="utf-8"></script>
 		<!-- 04_rollover_fade -->
 		<link rel="stylesheet" href="./style.css" type="text/css" media="screen" charset="utf-8"/>
   
@@ -66,7 +71,11 @@
 		<!-- -->
 	    <script src="jquery.cycle.all.min.js" type="text/javascript" ></script>
 		
-		<!-- <link rel="stylesheet" href="./style.css">
+		 <link rel="stylesheet" href="./css-jq/sunny/jquery-ui-1.8.17.custom.css" type="text/css" media="screen" charset="utf-8" />
+  <link rel="stylesheet" href="splitter.css" type="text/css" media="screen" charset="utf-8" />
+  
+  <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="./lib/jquery-ui-1.8.17.custom.min.js" type="text/javascript" charset="utf-8"></script>
         <link rel="stylesheet" href="./style[1].css">  -->
         
 	    <link rel="stylesheet" href="./nav[1].css">
@@ -200,7 +209,7 @@ footer a.single {
                 }
             #container {width:960px; margin:-10px auto 0 auto;
                 }
-            header { margin-top:0; height:156px; width:100%;  background-image:url('images/bluepan.jpg'); background-repeat:no-repeat; background-position:center; border-bottom:0
+            header { margin-top:0; height:156px; width:100%;  background-image:url('./images/bluepan.jpg'); background-repeat:no-repeat; background-position:center; border-bottom:0
 			    }
             h1 {font-family:Arial; font-size:320%; color:white; font-weight:normal;  text-align:center; padding-top:35px; margin-bottom:-10px; height: 94px; margin:auto;
             }
