--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	    <meta name=viewport content="width=device-width, initial-scale=1, user-scalable=0">
 
 	    <link rel=stylesheet href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css">
-	    <link rel=stylesheet href="./style.css">
+	    <link rel=stylesheet href="./CSS/style.css">
 
 	    <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 	    <script src="./js/scripts.js"></script>
@@ -28,11 +28,11 @@
          Viewport for responsive web design -->
 	    <!-- <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8"> -->
 		<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
-		 <link rel="stylesheet" href="../../css/sunny/jquery-ui-1.8.17.custom.css" type="text/css" media="screen" charset="utf-8" />
-         <link rel="stylesheet" href="splitter.css" type="text/css" media="screen" charset="utf-8" />
+		 <link rel="stylesheet" href="./css-jq/sunny/jquery-ui-1.8.17.custom.css" type="text/css" media="screen" charset="utf-8" />
+         <link rel="stylesheet" href="./CSS/splitter.css" type="text/css" media="screen" charset="utf-8" />
   
-  <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-  <script src="../../lib/jquery-ui-1.8.17.custom.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="./lib/jquery-ui-1.8.17.custom.min.js" type="text/javascript" charset="utf-8"></script>
 		<!-- 04_rollover_fade -->
 		<link rel="stylesheet" href="./style.css" type="text/css" media="screen" charset="utf-8"/>
   
@@ -4377,7 +4377,7 @@ li	{ margin: 5px; list-style-type:none;	}
         <script src=”js/jquery.mobile-1.0.1.min.js”></script>
         <script type=”text/javascript” src=”assets/js/ui.js”></script>
         <script type="text/javascript" src="js/jquery-1.7-min.js"></script>
-        <script type="text/javascript" src="js/script.js"></script>
+        <script type="text/javascript" src="js/scripts.js"></script>
         <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
        
         
@@ -4955,8 +4955,8 @@ width="220"></p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
                     <div class="subscribe-accept">
                         <input type="checkbox" name="subscribe_accept" required="required">
                         I agree to the
-				        <a href="./Myjourneyonline.com.html/privacy.html">Privacy Policy</a>,
-                        <a href="./Myjourneyonline.com.html/disclaimer.html">Disclaimer</a>
+				        <a href="https://orris0.github.io/orris0/privacy.html">Privacy Policy</a>,
+                        <a href="https://orris0.github.io/orris0/disclaimer.html">Disclaimer</a>
                         and to receive newsletters from Practical HTML5 Projects for fun and Profit!
                     </div>
 			        <p id="disclaimer">
