--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
          Viewport for responsive web design -->
 	    <!-- <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8"> -->
 		<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
-		 <link rel="stylesheet" href="./css-jq/sunny/jquery-ui-1.8.17.custom.css" type="text/css" media="screen" charset="utf-8" />
-         <link rel="stylesheet" href="./CSS/splitter.css" type="text/css" media="screen" charset="utf-8" />
+		<link rel="stylesheet" href="./css-jq/sunny/jquery-ui-1.8.17.custom.css" type="text/css" media="screen" charset="utf-8" />
+        <link rel="stylesheet" href="./CSS/splitter.css" type="text/css" media="screen" charset="utf-8" />
   
-  <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-  <script src="./lib/jquery-ui-1.8.17.custom.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="./lib/jquery-ui-1.8.17.custom.min.js" type="text/javascript" charset="utf-8"></script>
 		<!-- 04_rollover_fade -->
 		<link rel="stylesheet" href="./style.css" type="text/css" media="screen" charset="utf-8"/>
   
@@ -71,11 +71,11 @@
 		<!-- -->
 	    <script src="jquery.cycle.all.min.js" type="text/javascript" ></script>
 		
-		 <link rel="stylesheet" href="./css-jq/sunny/jquery-ui-1.8.17.custom.css" type="text/css" media="screen" charset="utf-8" />
-  <link rel="stylesheet" href="splitter.css" type="text/css" media="screen" charset="utf-8" />
+		<link rel="stylesheet" href="./css-jq/sunny/jquery-ui-1.8.17.custom.css" type="text/css" media="screen" charset="utf-8" />
+        <link rel="stylesheet" href="splitter.css" type="text/css" media="screen" charset="utf-8" />
   
-  <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-  <script src="./lib/jquery-ui-1.8.17.custom.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="./lib/jquery-ui-1.8.17.custom.min.js" type="text/javascript" charset="utf-8"></script>
         <link rel="stylesheet" href="./style[1].css">  -->
         
 	    <link rel="stylesheet" href="./nav[1].css">
@@ -95,19 +95,14 @@
         <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 		
 	    <style>
-			#home {
-	position: relative;
-}
-/* rollover-fa */
-#fader {
-  position: relative;
-}
+			 #home { position: relative;
+                 }
+                /* rollover-fa */
+                #fader { position: relative;
+                    }
 
-#fader .to {
-  display: none;
-  position: absolute;
-  left: 0;
-}
+                #fader .to { display: none; position: absolute; left: 0;
+                    }
 
 #home div {
 	background: url(graphics/cover.png) transparent 50% 50% no-repeat;
