--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   
         <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="./lib/jquery-ui-1.8.17.custom.min.js" type="text/javascript" charset="utf-8"></script>
-        <link rel="stylesheet" href="./style[1].css">  -->
+        <link rel="stylesheet" href="./style[1].css">  
         
 	    <link rel="stylesheet" href="./nav[1].css">
         <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
