--- a/creating-a-website.html
+++ b/creating-a-website.html
@@ -17,6 +17,72 @@
         <meta http-equiv="REFRESH" content="240">
 
         <title>Creating-a-Website</title>
+		<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
+		<link rel="stylesheet" href="./css-jq/sunny/jquery-ui-1.8.17.custom.css" type="text/css" media="screen" charset="utf-8" />
+        <link rel="stylesheet" href="./CSS/splitter.css" type="text/css" media="screen" charset="utf-8" />
+  
+        <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="./lib/jquery-ui-1.8.17.custom.min.js" type="text/javascript" charset="utf-8"></script>
+		<!-- 04_rollover_fade -->
+		<link rel="stylesheet" href="./style.css" type="text/css" media="screen" charset="utf-8"/>
+  
+		<!-- 01_lightbox -->
+        <link rel="stylesheet" href="./CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
+		<!-- 2_colorbox -->
+		<link rel="stylesheet" href="./CSS/colorbox.css" type="text/css" media="screen" charset="utf-8">
+		<!-- 3_jcrop -->
+        <link rel="stylesheet" href="./CSS/jquery.Jcrop.css" type="text/css" media="screen" charset="utf-8">	   	
+		<!-- -->
+		
+		<script src="jquery.innerfade.js" type="text/javascript" ></script>
+		<!-- -->
+		<script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+		<!-- -->
+		<script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+		<!-- 01_lightbox -->
+        <link rel="stylesheet" href="./CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
+		<!-- 2_colorbox -->
+		<link rel="stylesheet" href="./CSS/colorbox.css" type="text/css" media="screen" charset="utf-8">
+		<!-- 3_jcrop -->
+        <link rel="stylesheet" href="jquery.Jcrop.css" type="text/css" media="screen" charset="utf-8">	   	
+		<!-- -->
+		<!-- -->
+		<script src="jquery.Jcrop.min.js" type="text/javascript" charset="utf-8"></script>
+		<!-- -->
+		<script type="text/javascript" src="./js/scripts.js"></script>
+		<!-- -->
+		<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+		<!-- -->
+        <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
+		<!-- -->
+        <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
+		<!-- -->
+		<script src="jquery.innerfade.js" type="text/javascript" ></script>
+		<!-- -->
+	    <script src="jquery.cycle.all.min.js" type="text/javascript" ></script>
+		
+		<link rel="stylesheet" href="./css-jq/sunny/jquery-ui-1.8.17.custom.css" type="text/css" media="screen" charset="utf-8" />
+        <link rel="stylesheet" href="splitter.css" type="text/css" media="screen" charset="utf-8" />
+  
+        <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="./lib/jquery-ui-1.8.17.custom.min.js" type="text/javascript" charset="utf-8"></script>
+        <link rel="stylesheet" href="./style[1].css">  
+        
+	    <link rel="stylesheet" href="./nav[1].css">
+        <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+        <link rel="stylesheet" href="./font-awesome.min[1].css">
+	    <link rel="icon" type="image/png" href="./weed.jpg">
+	    <link rel="icon" type="image/png" href="./flexy-logo.png">
+        
+        <link rel=”stylesheet” href=”http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css” />
+        <!-- Font Awesome Icons -->
+        <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+        <!-- Google Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
+        <!-- Plugin CSS -->
+        <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
         <!-- <meta details go here> -->
 
@@ -1545,6 +1611,7 @@
   </a>
 </div>
 !-- End View in Browser -->
+
 
 
 
