--- a/index.html
+++ b/index.html
@@ -4509,7 +4509,7 @@ width="220"></p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
             <div class="data" id="html5-ch1-7content">
                 <div class="row">
                     <div class="col-12">
-                        <nav role="navigation" id="nav">
+                        <nav role="navigation" class="data" id="nav">
                             <input class="trigger" type="checkbox" id="mainNavButton">
                             <label for="mainNavButton" onclick>Menu</label>
                             <ul>
