--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -128,7 +128,28 @@
 
                 <div class="row">
                     <div class="çol-12">
-                      <img src="img/kite.png" ;>
+                        <img src="img/kite.png">
+					    <div class="data" id="html5-ch1-7leftcol">
+                            <h3>Cottages, converted barns, caravans</h3>
+                            <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
+                            <br>The superb interior of one of our cottages
+                        </div>
+
+                        <nav class="data" id="html5-ch1-7nav"><!--use the semantic tag <nav>-->
+                            <ul><!--start of menu list-->
+                                <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
+                                <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
+                                <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
+                                <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
+                                <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
+                            </ul><!--end of menu list-->
+                        </nav>
+
+                        <!--</div> removed and replaced with </nav>-->
+                        <div class="data" id="html5-ch1-7midcol">
+                            <h3>Situated in the BDA's beautiful countryside</h3>
+                            <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
+                        </div>
                     </div>
                 </div><!-- end-.row -->
 		              
