--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -110,7 +110,7 @@
             
                 <div class="row">
                     <div class="col-12">
-                        <nav role="navigation" id="nav">
+                        <nav role="navigation" class="data" id="nav">
                             <input class="trigger" type="checkbox" id="mainNavButton">
                             <label for="mainNavButton" onclick>Menu</label>
                             <ul>
