--- a/index.html
+++ b/index.html
@@ -4506,7 +4506,7 @@ width="220"></p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
                     </ul>
                 </nav>
 			
-            <div class="data" id="html5-ch1-7content">
+            <div data-role="content" class="data" id="html5-ch1-7content">
                 <div class="row">
                     <div class="col-12">
                         <nav role="navigation" class="data" id="nav">
