--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -155,7 +155,7 @@
 		              
 		        <div class="row">
                     <div class="çol-12" padding="2%">
-                        <h2 class="dark" id="html5-ch1-7h2">Welcome to <strong>StarTrackr!</strong> </h2>
+                        <h2 class="dark" id="html5-ch1-7h2"> Award winning accommodation, self catering or bed and breakfast</h2>
                     </div><!-- end-col-12 -->
                 </div><!-- end-row -->
 				
@@ -451,8 +451,7 @@
                     <div class="col-12" style="padding: 2%;">
                         <div id="banner">
                             <div id="banner-wrapper">
-                                <h2 class="dark" id="html5-ch1-7h2">Practical HTML5 Projects for fun and Profit!<br> 
-						        Award winning accommodation, self catering or bed and breakfast</h2>
+                                <h2 class="dark" id="html5-ch1-7h2">Practical HTML5 Projects for fun and Profit!<br></h2>
                             </div>
                         </div>
                     </div><!-- end col-12 -->
