--- a/index.html
+++ b/index.html
@@ -4489,7 +4489,7 @@ width="220"></p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
         <div class="wrapper">
 			<div id="container">
 		        <img class="logo" src="img/flexy-logo.png">
-				<header class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
+				<header data-role="header" class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
 				    <hgroup>  
 						<h1 class="veryimportant heading stuff" id="html5-ch1-7h1">StarTrackr!</h1>
 						<h2 class="heading"> Practical HTML5 Projects for fun and Profit!</h2>
@@ -4523,16 +4523,14 @@ width="220"></p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
                             </ul>
                         </nav>
 					</div><!-- end-col-12 -->
-                </div><!-- end-row --
+                </div><!-- end-row -->
 
-		<div id="footer">
-			<p>
-				&copy; Copyright 2010 CelebriTracker Productions
-			</p>
+		        <div id="footer">
+			        <p>	&copy; Copyright 2010 CelebriTracker Productions</p>
+		        </div>
+	        </div>
 		</div>
-	</div>
-					     </div>
-					</div>	              
+	</div>	              
 		            
 					<div class="row">
                         <div class="çol-12" padding="2%">
