--- a/index.html
+++ b/index.html
@@ -106,21 +106,10 @@
                 }
             #home a { top: 2.5em; left: 50%; margin-left: -25%; position: absolute; display: none; width: 50%;
                 }
-
-            #album {
-	background: transparent 50% 50% no-repeat;
-	background-size: 120%;
-	overflow: hidden;
-}
-
-            #album .ui-content {
-	background-color: rgba(33, 66, 99, .25);
-	bottom: 54px;
-	padding: 0;
-	position: absolute;
-	width: 100%;
-}
-
+            #album { background: transparent 50% 50% no-repeat; background-size: 120%; overflow: hidden;
+                }
+            #album .ui-content { background-color: rgba(33, 66, 99, .25); bottom: 54px; padding: 0; position: absolute; width: 100%;
+                }
             #album .ui-body {
 	margin: 0;
 	padding: 1em;
