--- a/index.html
+++ b/index.html
@@ -4502,20 +4502,16 @@ width="220"></p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
 			        <p>	&copy; Copyright 2010 CelebriTracker Productions</p>
 		        </div>
 	        </div>
-		</div>
-	</div>	              
+		</div>              
 		            
-					<div class="row">
-                        <div class="çol-12" padding="2%">
-						    <div id="banner-wrapper">
-                                <h2 class="dark" id="html5-ch1-7h2">
-									Welcome to <strong>StarTrackr!</strong> 
-								    the planet's premier celebrity tracking and monitoring service.
-								</h2>
-							</div>    
-                        </div><!-- end-col-12 --
-                    </div><!-- end-row --
-				
+		<div class="row">
+            <div class="çol-12" padding="2%">
+				<div id="banner-wrapper">
+                    <h2 class="dark" id="html5-ch1-7h2">Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service.</h2>
+				</div>    
+            </div><!-- end-col-12 -->
+        </div><!-- end-row -->
+	</div>	<!-- end wrapper -->	
                     <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
                         <div class="çol-12">
                             <img src="img/paper.png">
