--- a/index.html
+++ b/index.html
@@ -110,64 +110,33 @@
                 }
             #album .ui-content { background-color: rgba(33, 66, 99, .25); bottom: 54px; padding: 0; position: absolute; width: 100%;
                 }
-            #album .ui-body {
-	                   margin: 0;
-	                          padding: 1em;
-	                        text-align: center;
-                        }
-
-            #album .ui-br {
-	                 border: none;
-                        }
-
-            #album footer {
-               	overflow: visible;
+            #album .ui-body { margin: 0; padding: 1em; text-align: center;
                 }
-
-            .oneup {
-	                 display: none;
-	               position: absolute;
-	                    z-index: 999;
-                         }
-
-            footer {
-	                 bottom: 0;
-	                       position: absolute !important;
-                            }
-
-            footer div {
-	                 margin-left: auto !important;
-	               margin-right: auto !important;
-	                   width: 80%;
-                            }
-
-            footer div.wide {
-	                  width: 95%;
-                      }
-
-            footer a {
-	                 width: 49.5%;
-                    }
-
-            footer a.quatro {
-	                   width: 24.5%;
-                         }
-
-                   footer a.quatro:first-child {
-	                 width: 24.9%;
-                        }
-
-                      footer a.single {
-	                   width: 99.9%;
-                          }
-
+            #album .ui-br { border: none;
+                }
+            #album footer {	overflow: visible;
+                }
+            .oneup { display: none; position: absolute; z-index: 999;
+                }
+            footer { bottom: 0; position: absolute !important;
+                }
+            footer div { margin-left: auto !important; margin-right: auto !important; width: 80%;
+                }
+            footer div.wide { width: 95%;
+				}
+            footer a { width: 49.5%;
+                }
+            footer a.quatro { width: 24.5%;
+                }
+            footer a.quatro:first-child { width: 24.9%;
+                }
+            footer a.single { width: 99.9%;
+                }
 			/* lightbox css */
-			#overlay {
-                position: fixed; top: 0; left: 0; height: 100%; width: 100%; background: black url(./css-jq/images/spinner.gif) no-repeat scroll center center;
+			#overlay { position: fixed; top: 0; left: 0; height: 100%; width: 100%; background: black url(./css-jq/images/spinner.gif) no-repeat scroll center center;
                 }
             #lightbox { position: fixed;
                 }
-			
 			/* Set styles to equalise browser rendition*/
             html, body, h1, h2, h3, h4, h5, h6, p, ol, ul, li { padding: 0; margin: 0;
                 }
@@ -276,43 +245,24 @@
 			    }
             #photos { border: 1px solid #BEBEBE; height: 400px; overflow: hidden; position: relative; width: 400px;
                 }
+            #photos ul { left: 0; list-style-type: none; margin: 0; padding: 0; position: absolute; top: 0; width: 2400px;
+                }
+            #photos li { float: left;
+                }
+            #photos .trigger { left: 0; position: absolute; top: 0; z-index: 10; text-indent: -9999px; height: 400px; width: 400px; display: block;
+                }
 
-#photos ul {
-  left: 0;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  position: absolute;
-  top: 0;
-  width: 2400px;
-}
-
-#photos li {
-  float: left;
-}
-
-#photos .trigger {
-  left: 0;
-  position: absolute;
-  top: 0;
-  z-index: 10;
-  text-indent: -9999px;
-  height: 400px;
-  width: 400px;
-  display: block;
-}
-
-/* **************************************************************************** */
-/*equalise all the margins, paddings and borders built into various browsers*/ 
-div body header #content { margin:0; padding:0; border:0; 
-}
-body { background:#FFF url(images/green-grad.jpg) repeat-x; margin:auto;
-}
-/*add display attributes for the semantic tags*/
-header, footer, section, article, nav { display:block; 
-}
-div#html5-ch1-7header.row {width:920px; height:180px; padding:0; border:10px white solid; background: url(../bda-20.jpg); margin:10px auto; 
-}
+            /* **************************************************************************** */
+            /*equalise all the margins, paddings and borders built into various browsers*/ 
+            div body header #content { margin:0; padding:0; border:0; 
+                }
+            body { background:#FFF url(images/green-grad.jpg) repeat-x; margin:auto;
+                }
+            /*add display attributes for the semantic tags*/
+            header, footer, section, article, nav { display:block; 
+                }
+            div#html5-ch1-7header.row {width:920px; height:180px; padding:0; border:10px white solid; background: url(../bda-20.jpg); margin:10px auto; 
+                }
 h1#html5-ch1-7h1 { font-size:300%; color :white; position: relative; left:90px; top: 55px; width:480px;
 }
 #html5-ch1-7rosette { position:relative; left:750px; top:5px; 
