--- a/index.html
+++ b/index.html
@@ -377,27 +377,21 @@ h1 { font-size:300%; color :white; position: relative; left:45px; top: 5px; widt
       border-width: 10px;
       border-left-width: 0;font-weight:normal; text-align:center; padding-top:2em; margin-bottom:-0.625em; margin:auto; */
 }
-
 div.menu-bar { position: relative; top: 2.5em; left: 1em;
-
 }
-
-
-
-
-/*equalise all the margins, paddings and borders built into various browsers*  
+/*equalise all the margins, paddings and borders built into various browsers*/  
 div header #content { margin:0; padding:0; border:0; 
 }
 
 body { background:#FFF url(../orris0/images/green-grad.jpg) repeat-x; margin:auto; 
 }
 
-/*add display attributes for the semantic tags*
+/*add display attributes for the semantic tags*/
 header, footer, section, article, nav { display:block; 
 }
 ul { padding-left: 0;
 }
-/* end of style equalisation *
+/* end of style equalisation */
 p { 
 
     color: white;
@@ -933,104 +927,6 @@ br.clear { clear:both;
 /*change #footer to footer *
 footer { clear:both; color:maroon; text-align:center;
 }
-
-
-
-
-/*Listing 2-6b provides the CSS presentation instructions for a 3 column gallery set in a real world page.
-Listing 2-6b. The CSS Style Sheet for Listing 2-6a (gallery-page.css)
-set attributes for consistent appearance in all browsers
-html, body, p, ul, li, h1, h2 { margin:0; padding:0; 
-}
-*/
-/*set images to have no borders*
-img {
-border:0;
-}
-/*add display attributes for the semantic tags*
-header, footer, section, article, nav { display:block;
-}
-
-/*PAGE LAYOUT*
-body {margin:auto; width:970px;
-}
-header { width:970px;
-}
-nav { float:left; margin-left:10px; width:115px;
-}
-nav ul { margin-left:0; border:0; width:115px;
-}
-/*set far right column for ads*
-#gallerypagerightcol { width:150px; float:right; text-align:center;
-}
-#gallerypagerightcol p.advert {font-size:small; margin-top:190px;
-}
-/*set middle column for main content*
-#gallerypagemidcol { margin-left:135px; margin-right:155px;
-}
-/*set gallery block position*
-#gallery-pagegallery-block { position:relative; left: 30px; top:10px;
-}
-/*set footer*
-footer { clear:both; color:black; text-align:center; width:970px;
-}
-.clear { clear:both;
-}
-/* 51CHAPTER 2 ■ A ROLLOVER PICTURE GALLERY */
-/*set menu buttons*
-li.btn a { display:block; background-color :#66CCFF; color:black; font-weight:bold;
-padding:4px; margin-left:0; text-align:center; list-style-type:none;
-text-decoration:none; width:110px;
-}
-li.btn a:hover { background-color:blue; color:white;
-}
-li.btn { width:110px;
-}
-/*SET THUMBNAIL GALLERY BLOCK*/
-/* Set general thumbnail styles */
-#gallery-pagecol-1 { position: absolute; top: 0; left: 0; width:85px;
-}
-/*place the first column on the page*/
-li { margin: 5px; list-style-type:none;
-}
-/*remove bullets from the un-ordered list elements and create the
-MouseOut state (default) - create and position a space for the larger images and
-hide them*/
-#gallery-pagecol-1 a img.hid { width: 260px; height:390px; position:
-absolute; top: 10px; left: 330px; visibility: hidden;
-}
-/* MouseOver state (hover)- this reveals larger picture */
-#gallerypagecol-1 a:hover { background: white; }
-#gallerypagecol-1 a:hover img.hid { visibility:visible;
-}
-/*----------------------------------------------------*/
-/* set 2nd column of thumbnails 85px further over to right*/
-#gallerypagecol-2 { position: absolute; top: 0; left: 85px; width:85px;
-}
-li { margin: 5px; list-style-type:none;
-}
-/* MouseOut state (default) - hide larger picture */
-#col-2 a img.hid { width: 260px; height:390px;
-position: absolute; top: 10px; left: 245px; margin-left:0;visibility: hidden;
-}
-/* MouseOver state (hover)- reveal larger picture */
-#col-2 a:hover { background: white; }
-#col-2 a:hover img.hid { visibility:visible; }
-/*----------------------------------------------------*/
-/* set 3rd column of thumbnails 170px further over to right*/
-#gallerypagecol-3 { position: absolute; top: 0; left: 175px; width:95px; }
-li { margin: 5px; list-style-type:none;
-}
-/* MouseOut state (default) - hide larger picture */
-#gallerypagecol-3 a img.hid { width: 260px; height:390px;
-position: absolute; top: 10px; left: 155px; margin-left:0; visibility: hidden;
-}
-/* MouseOver state (hover)- reveal larger picture */
-#gallerypagecol-3a:hover { background: white;
-}
-#col-3 a:hover img.hid { visibility:visible;
-}
-
 
 /* ###################################### *
 body {
