--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -9,7 +9,8 @@
         -->
         <!-- meta details go here -->
         <title>Test page-html5-ch1-7-Templates for A full page roll-over gallery</title>
-		
+		<meta charset=utf-8>
+		<base href="http://htmlref.com/basexeample">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <!-- Viewport for responsive web design -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
