--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -2,13 +2,10 @@
 <!DOCTYPE html>
 <html ng-app lang="en">
     <head profile="http://www.w3.org/2005/10/profile">
-        <!--
-        The following 2 meta tags *must* come first in the <head>
-	        to consistently ensure proper document rendering.
-        Any other head element should come *after* these tags.
-        -->
-        <!-- meta details go here -->
-        <title>Test page-html5-ch1-7-Templates for A full page roll-over gallery</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <title>HTML5 expanded section example</title>
+		 <!-- meta details go here -->
+        <title>Test page-HTML5 expanded section example-ch1-7</title>
 		<meta charset=utf-8>
 		<base href="http://htmlref.com/basexeample">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -91,6 +88,58 @@
             <script src="js/html5.js" type="text/javascript"></script>
         <![endif]-->
     </head>
+    <body>
+        <header>
+            <h1>Welcome to the Future World of HTML5</h1>
+            <h2>Don't be scared it isn't that hard!</h2>
+        </header>
+		<!-- assume chapter 1 before -->
+        <section id="chapter2">
+            <header>
+                <h1>Chapter 2</h1>
+            </header>
+			<p>Intro to chapter 2 here...</p>
+            <section id="newStrucreElements">
+                <header>
+                    <h2>New Structural Elements</h2>
+                </header>
+                    <h3>header Element</h3>
+                    <p>Discussion of header element.</p>
+                    <h3>footer Element</h3>
+                    <p>Discussion of footer element.</p>
+                    <h3>section Element</h3>
+                    <p>Discussion of section element</p>
+            </section>
+            <section id="newFormElements">
+                <header>
+                    <h2>New Form Elements</h2>
+                </header>
+                <h3>input type=date</h3>
+                <p>Discussion here...</p>
+                <footer>
+                    <p>These ideas are from WebForms specification.</p>
+                </footer>
+                </section>
+                </section>
+                <section id="chapter3">
+                    <header>
+                        <h2>Chapter 3</h2>
+                    </header>
+                    <p>Massive element reference...</p>
+                    </section>
+                    <footer>
+                        <p>Content of this example is not under copyright</p>
+                    </footer>
+                </body>
+            </html>
+
+    
+        <!--
+        The following 2 meta tags *must* come first in the <head>
+	        to consistently ensure proper document rendering.
+        Any other head element should come *after* these tags.
+        -->
+       
 
 	<body>
 		
