--- a/index.html
+++ b/index.html
@@ -96,6 +96,30 @@
         <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 		
 	    <style>
+			<!--
+/* Simple Document Wide CSS rules */
+
+    body {font-size: 10pt;
+     font-family: Serif;
+     color: black;
+     background-color: white;}
+    h1 {font-size: 24pt;
+     font-family: Sans-Serif;
+     color: black;
+     text-align: center;}
+    p {text-indent: 0.5in;
+     margin-left: 50px;
+     margin-right: 50px;}
+    a:link {color: blue;
+     text-decoration: none;}
+    a:visited {color: red;
+     text-decoration: none;}
+    a:active {color: red;
+     text-decoration: none;}
+    a:hover {color: red;
+     text-decoration: underline;}
+
+-->
 			#home { position: relative;
                 }
                 /* rollover-fa */
