--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head profile="http://www.w3.org/2005/10/profile">
         <title>Gallery-page-Templates</title>
         <meta charset=utf-8>
-		<base href="http://htmlref.com/basexeample" >
+		<base href="https://orris0.github.io/orris0/index.html" >
 		<link rel="apple-touch-icon" href="graphics/icon.png">
 	    <meta name="apple-mobile-web-app-capable" content="yes">
 
