--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		<!-- -->
         <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
 		<!-- -->
-        <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
+        <script type="text/javascript" src="./css-jq/jquery.scrollTo.js" charset="utf-8"></script>
 		<!-- -->
 		<script src="jquery.innerfade.js" type="text/javascript" ></script>
 		<!-- -->
